# poisson-disc-sampler

./: CMakeLists.txt  README.md
include/: CImg.h
input/: area.csv
src/: Point.cc  Point.h  PoissonDiscSampling.cc  PoissonDiscSampling.h  main.cc
